--- a/shop/index.html
+++ b/shop/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="fon.css">
 </head>
+
 <body>
     <header>
         <div class="navtop">
@@ -16,7 +18,7 @@
                 <a class="lef3" href="">Для дома</a>
             </div>
             <div class="logo">
-                
+
             </div>
             <div class="navright">
                 <a class="rig1" href=""></a>
@@ -26,19 +28,19 @@
                 <a class="rig5" href=""></a>
             </div>
         </div>
-            <div class="navbot" >
-                <a class="bot1" href="">Новинки</a>
-                <a class="bot1" href="">Одежда</a>
-                <a class="bot1" href="">Обувь</a>
-                <a class="bot1" href="">Сумки</a>
-                <a class="bot1" href="">Аксессуары</a>
-                <a class="bot1" href="">Жаркое лето</a>
-                <a class="bot1" href="">Подарочная карта</a>
-                <a class="bot1" href="">Для дома</a>
-                <a class="bot1" href="">Бренды</a>
-                <a class="bot1" href="">Акции и Новости</a>
-                <a class="bot2" href="">Sale</a>
-            </div>
+        <div class="navbot">
+            <a class="bot1" href="">Новинки</a>
+            <a class="bot1" href="">Одежда</a>
+            <a class="bot1" href="">Обувь</a>
+            <a class="bot1" href="">Сумки</a>
+            <a class="bot1" href="">Аксессуары</a>
+            <a class="bot1" href="">Жаркое лето</a>
+            <a class="bot1" href="">Подарочная карта</a>
+            <a class="bot1" href="">Для дома</a>
+            <a class="bot1" href="">Бренды</a>
+            <a class="bot1" href="">Акции и Новости</a>
+            <a class="bot2" href="">Sale</a>
+        </div>
     </header>
     <main>
         <div class="maitop">
@@ -50,7 +52,7 @@
                 <a class="maileft1" href="">Одежда</a>
             </div>
             <div class="maicente">
-            <a class="maicente1" href="">МУЖСКАЯ ОДЕЖДА</a>
+                <a class="maicente1" href="">МУЖСКАЯ ОДЕЖДА</a>
             </div>
         </div>
         <div class="frame">
@@ -62,10 +64,10 @@
                 <a class="frameleft1" href="">Цвет</a>
             </div>
             <div class="frameright">
-            <a class="frameright1" href="">По популярности</a>
+                <a class="frameright1" href="">По популярности</a>
             </div>
         </div>
-        
+
         <div class="maiblo">
             <div class="maiosnov">
                 <div class="maicard">
@@ -250,78 +252,79 @@
         </div>
     </main>
     <footer>
-        <div class="rss">
-            <label for="rss">Подпишитесь на нашу рассылку и получи скидку 10%</label>
-            <div class="rssInput">
-                <input type="text" id="rss" placeholder="E-mail">
-                <input class="but" type="submit" value="Подписаться">
-            </div>
-        </div>
-        <div class="footMav">
-            <div class="footItem">
-                <h3>Каталог</h3>
-                <a href="#">Женщинам</a>
-                <a href="#">Мужяинам</a>
-            </div>
-            <div class="footItem">
-                <h3>Покупки онлайн</h3>
-                <a href="#">Доставка</a>
-                <a href="#">Оплата</a>
-                <a href="#">Возврат</a>
-                <a href="#">Отслеживание заказа</a>
-            </div>
-            <div class="footItem">
-                <h3>Покупателям</h3>
-                <a href="#">Правила работы интернет-магазина</a>
-                <a href="#">OUTLET</a>
-                <a href="#">Подарочные карты</a>
-                <a href="#">Новости и акции</a>
-                <a href="#">Корпоративные продажи</a>
-                <a href="#">Обратная связь</a>
-            </div>
-            <div class="footItem">
-                <h3>Услуги и сервис</h3>
-                <a href="#">Парковка для клиентов</a>
-                <a href="#">Кафе и рестораны</a>
-                <a href="#">Банки</a>
-                <a href="#">Кафе и рестораны</a>
-                <a href="#">Ремонт обуви</a>
-                <a href="#">Портной</a>
-                <a href="#">Гравёр</a>
-            </div>
-            <div class="footItem">
-                <h3>Универмаг</h3>
-                <a href="#">Схема Универмага</a>
-                <a href="#">О компании</a>
-                <a href="#">Карьера</a>
-                <a href="#">Реквизиты</a>
-                <a href="#">Партнерам</a>
-                <a href="#">Арендаторам</a>
-                <a href="#">Акционерам</a>
-                <a href="#">Охрана труда</a>
-                <a href="#">Контакты</a>
-            </div>
-        </div>
-        <div class="foot">
-            <div class="social">
-                <div><b>Мы в соц. сетях</b></div>
-                <div class="socItem">
-                    <img src="./style/img/social/vk.svg" alt="#">
-                    <img src="./style/img/social/insta.svg" alt="#">
-                    <img src="./style/img/social/ok.svg" alt="#">
+            <div class="footmen">
+                <a class="footskid">Подпишитесь на нашу рассылку и получи скидку 10%</a>
+                <div class="rss">
+                        <input class="footemai" type="text" id="rss" placeholder="E-mail">
+                        <a href="#" class="button28">Подписаться</a>
                 </div>
-            </div>
-            <div class="copy">
-                <p>© Универмаг Московский, 2020—2021.</p>
-                <a href="#">Политика конфиденциальности</a>
-            </div>
-            <div class="pay">
-                <img src="./style/img/pay/mastercard.svg" alt="mastercard">
-                <img src="./style/img/pay/visa.svg" alt="visa">
-                <img src="./style/img/pay/mir.svg" alt="mir">
-                <img src="./style/img/pay/paykeeper.png" alt="paykeeper">
+                <div class="footMav">
+                    <div class="footItem">
+                        <h3>Каталог</h3>
+                        <a href="#">Женщинам</a>
+                        <a href="#">Мужяинам</a>
+                    </div>
+                    <div class="footItem">
+                        <h3>Покупки онлайн</h3>
+                        <a href="#">Доставка</a>
+                        <a href="#">Оплата</a>
+                        <a href="#">Возврат</a>
+                        <a href="#">Отслеживание заказа</a>
+                    </div>
+                    <div class="footItem">
+                        <h3>Покупателям</h3>
+                        <a href="#">Правила работы интернет-магазина</a>
+                        <a href="#">OUTLET</a>
+                        <a href="#">Подарочные карты</a>
+                        <a href="#">Новости и акции</a>
+                        <a href="#">Корпоративные продажи</a>
+                        <a href="#">Обратная связь</a>
+                    </div>
+                    <div class="footItem">
+                        <h3>Услуги и сервис</h3>
+                        <a href="#">Парковка для клиентов</a>
+                        <a href="#">Кафе и рестораны</a>
+                        <a href="#">Банки</a>
+                        <a href="#">Кафе и рестораны</a>
+                        <a href="#">Ремонт обуви</a>
+                        <a href="#">Портной</a>
+                        <a href="#">Гравёр</a>
+                    </div>
+                    <div class="footItem">
+                        <h3>Универмаг</h3>
+                        <a href="#">Схема Универмага</a>
+                        <a href="#">О компании</a>
+                        <a href="#">Карьера</a>
+                        <a href="#">Реквизиты</a>
+                        <a href="#">Партнерам</a>
+                        <a href="#">Арендаторам</a>
+                        <a href="#">Акционерам</a>
+                        <a href="#">Охрана труда</a>
+                        <a href="#">Контакты</a>
+                    </div>
+                </div>
+                <div class="foot">
+                    <div class="social">
+                        <div><b>Мы в соц. сетях</b></div>
+                        <div class="socItem">
+                            <img src="./style/img/social/vk.svg" alt="#">
+                            <img src="./style/img/social/insta.svg" alt="#">
+                            <img src="./style/img/social/ok.svg" alt="#">
+                        </div>
+                    </div>
+                    <div class="copy">
+                        <p>© Универмаг Московский, 2020—2021.</p>
+                        <a href="#">Политика конфиденциальности</a>
+                    </div>
+                    <div class="pay">
+                        <img src="./style/img/pay/mastercard.svg" alt="mastercard">
+                        <img src="./style/img/pay/visa.svg" alt="visa">
+                        <img src="./style/img/pay/mir.svg" alt="mir">
+                        <img src="./style/img/pay/paykeeper.png" alt="paykeeper">
+                 </div>
             </div>
         </div>
     </footer>
 </body>
+
 </html>
