--- a/shop/index.html
+++ b/shop/index.html
@@ -73,11 +73,11 @@
                 <div class="maicard">
                     <div class="card">
                         <div>
-                            <img src="image 58.png">
+                            <img src="/shop/imag/image 58.png">
                         </div>
                         <div class="cardtext">
                             <div class="brand">
-                                <img src="image 16.png">
+                                <img src="/shop/imag/image 16.png">
                             </div>
                             <div class="cardname">
                                 <a class="nam" href="">Мужские брюки BOSS</a>
@@ -87,11 +87,11 @@
                     </div>
                     <div class="card">
                         <div>
-                            <img src="image 59.png">
+                            <img src="/shop/imag/image 59.png">
                         </div>
                         <div class="cardtext">
                             <div class="brand">
-                                <img src="image 17.png">
+                                <img src="/shop/imag/image 17.png">
                             </div>
                             <div class="cardname">
                                 <a class="nam" href="">Мужские брюки BOSS</a>
@@ -101,11 +101,11 @@
                     </div>
                     <div class="card">
                         <div>
-                            <img src="image 58.png">
+                            <img src="/shop/imag/image 585.png">
                         </div>
                         <div class="cardtext">
                             <div class="brand">
-                                <img src="image 16.png">
+                                <img src="/shop/imag/image 16.png">
                             </div>
                             <div class="cardname">
                                 <a class="nam" href="">Мужские брюки BOSS</a>
@@ -115,69 +115,11 @@
                     </div>
                     <div class="card">
                         <div>
-                            <img src="image 58.png">
+                            <img src="/shop/imag/image 586.png">
                         </div>
                         <div class="cardtext">
                             <div class="brand">
-                                <img src="image 16.png">
-                            </div>
-                            <div class="cardname">
-                                <a class="nam" href="">Мужские брюки BOSS</a>
-                                <a class="namcen" href="">16999</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="maicard">
-                    <div class="card">
-                        <div>
-                            <img src="image 58.png">
-                        </div>
-                        <div class="cardtext">
-                            <div class="brand">
-                                <img src="image 16.png">
-                            </div>
-                            <div class="cardname">
-                                <a class="nam" href="">Мужские брюки BOSS</a>
-                                <a class="namcen" href="">16999</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div>
-                            <img src="image 58.png">
-                        </div>
-                        <div class="cardtext">
-                            <div class="brand">
-                                <img src="image 16.png">
-                            </div>
-                            <div class="cardname">
-                                <a class="nam" href="">Мужские брюки BOSS</a>
-                                <a class="namcen" href="">16999</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div>
-                            <img src="image 58.png">
-                        </div>
-                        <div class="cardtext">
-                            <div class="brand">
-                                <img src="image 16.png">
-                            </div>
-                            <div class="cardname">
-                                <a class="nam" href="">Мужские брюки BOSS</a>
-                                <a class="namcen" href="">16999</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div>
-                            <img src="image 58.png">
-                        </div>
-                        <div class="cardtext">
-                            <div class="brand">
-                                <img src="image 16.png">
+                                <img src="/shop/imag/image 16.png">
                             </div>
                             <div class="cardname">
                                 <a class="nam" href="">Мужские брюки BOSS</a>
@@ -189,11 +131,11 @@
                 <div class="maicard">
                     <div class="card">
                         <div>
-                            <img src="image 58.png">
+                            <img src="/shop/imag/image 591.png">
                         </div>
                         <div class="cardtext">
                             <div class="brand">
-                                <img src="image 16.png">
+                                <img src="/shop/imag/image 16.png">
                             </div>
                             <div class="cardname">
                                 <a class="nam" href="">Мужские брюки BOSS</a>
@@ -203,11 +145,11 @@
                     </div>
                     <div class="card">
                         <div>
-                            <img src="image 58.png">
+                            <img src="/shop/imag/image 592.png">
                         </div>
                         <div class="cardtext">
                             <div class="brand">
-                                <img src="image 16.png">
+                                <img src="/shop/imag/image 16.png">
                             </div>
                             <div class="cardname">
                                 <a class="nam" href="">Мужские брюки BOSS</a>
@@ -217,11 +159,11 @@
                     </div>
                     <div class="card">
                         <div>
-                            <img src="image 58.png">
+                            <img src="/shop/imag/image 593.png">
                         </div>
                         <div class="cardtext">
                             <div class="brand">
-                                <img src="image 16.png">
+                                <img src="/shop/imag/image 16.png">
                             </div>
                             <div class="cardname">
                                 <a class="nam" href="">Мужские брюки BOSS</a>
@@ -231,11 +173,69 @@
                     </div>
                     <div class="card">
                         <div>
-                            <img src="image 58.png">
+                            <img src="/shop/imag/image 594.png">
                         </div>
                         <div class="cardtext">
                             <div class="brand">
-                                <img src="image 16.png">
+                                <img src="/shop/imag/image 16.png">
+                            </div>
+                            <div class="cardname">
+                                <a class="nam" href="">Мужские брюки BOSS</a>
+                                <a class="namcen" href="">16999</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="maicard">
+                    <div class="card">
+                        <div>
+                            <img src="/shop/imag/image 585.png">
+                        </div>
+                        <div class="cardtext">
+                            <div class="brand">
+                                <img src="/shop/imag/image 16.png">
+                            </div>
+                            <div class="cardname">
+                                <a class="nam" href="">Мужские брюки BOSS</a>
+                                <a class="namcen" href="">16999</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div>
+                            <img src="/shop/imag/image 586.png">
+                        </div>
+                        <div class="cardtext">
+                            <div class="brand">
+                                <img src="/shop/imag/image 16.png">
+                            </div>
+                            <div class="cardname">
+                                <a class="nam" href="">Мужские брюки BOSS</a>
+                                <a class="namcen" href="">16999</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div>
+                            <img src="/shop/imag/image 591.png">
+                        </div>
+                        <div class="cardtext">
+                            <div class="brand">
+                                <img src="/shop/imag/image 16.png">
+                            </div>
+                            <div class="cardname">
+                                <a class="nam" href="">Мужские брюки BOSS</a>
+                                <a class="namcen" href="">16999</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div>
+                            <img src="/shop/imag/image 594.png">
+                        </div>
+                        <div class="cardtext">
+                            <div class="brand">
+                                <img src="/shop/imag/image 16.png">
                             </div>
                             <div class="cardname">
                                 <a class="nam" href="">Мужские брюки BOSS</a>
@@ -307,9 +307,9 @@
                     <div class="social">
                         <div><b>Мы в соц. сетях</b></div>
                         <div class="socItem">
-                            <img src="./style/img/social/vk.svg" alt="#">
-                            <img src="./style/img/social/insta.svg" alt="#">
-                            <img src="./style/img/social/ok.svg" alt="#">
+                            <img src="/shop/imag/vk.svg" alt="#">
+                            <img src="/shop/imag/insta.svg" alt="#">
+                            <img src="/shop/imag/ok.svg" alt="#">
                         </div>
                     </div>
                     <div class="copy">
@@ -317,10 +317,10 @@
                         <a href="#">Политика конфиденциальности</a>
                     </div>
                     <div class="pay">
-                        <img src="./style/img/pay/mastercard.svg" alt="mastercard">
-                        <img src="./style/img/pay/visa.svg" alt="visa">
-                        <img src="./style/img/pay/mir.svg" alt="mir">
-                        <img src="./style/img/pay/paykeeper.png" alt="paykeeper">
+                        <img src="/shop/imag//Group 166.svg" alt="mastercard">
+                        <img src="/shop/imag//color.svg" alt="visa">
+                        <img src="/shop/imag//color11.svg" alt="mir">
+                        <img src="/shop/imag//image 11.png" alt="paykeeper">
                  </div>
             </div>
         </div>
