--- a/K.S/index.html
+++ b/K.S/index.html
@@ -15,12 +15,12 @@
         <div class="nav">
 
             <a href="">Главная</a>
-            <a href="">Сеансы</a>
+            <a href="">Консультации</a>
             <a href="">Отзовы</a>
             <a href="">Контакты</a>
             <a href="">Новости</a>
             <a href="">Обо мне</a>
-            <a href="">Блог</a>
+            <a href="">Обучение</a>
 
         </div>
         <div class="batt">
