--- a/JS/games/index.html
+++ b/JS/games/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
+
 <head>
- <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <meta http-equiv="X-UA-Compatible" content="ie=edge">
- <title>Flappy Bird!</title>
+
+<meta charset="UTF-8">
+
+<meta name="viewport", content="width=device-width, initial-scale=1.0">
+
+<link rel="stylesheet" href="snake.css">
+
+<script src="script.js"></script>
+
 </head>
+
 <body>
 
- <canvas id="canvas" width="288" height="512"></canvas>
+<canvas id="board"></canvas>
 
- <script src="script.js"></script>
 </body>
+
 </html>
