--- a/JS/lesson15/index.html
+++ b/JS/lesson15/index.html
@@ -12,17 +12,17 @@
         <div>Ваше имя</div>
         <input id="name" type="text">
         <div>Ваш возраст</div>
-        <input type="text" name="age" >
+        <input id="age" type="text">
         <div>Ваш горд</div>
-        <input type="text" name="city">
+        <input id="city" type="text">
         <div>Ваш номер телефона</div>
-        <input type="text" name="number">
-        <button onclick="saveAdd()">Save</button>
+        <input id="number" type="text" >
+        <button onclick="addStudent()">Save</button>
     </div>
-      <button onclick="saveAdd()">Show Name,</button>
-      <button onclick="saveAdd()">Show Age</button>
-      <button onclick="saveAdd()">Show City</button>
-      <button onclick="saveAdd()">Show Number</button>
+      <button onclick="addStudent()">Show Name,</button>
+      <button onclick="addStudent()">Show Age</button>
+      <button onclick="addStudent()">Show City</button>
+      <button onclick="addStudent()">Show Number</button>
       <output name="result" id="result">0</output>
     <script src="script.js"></script>
 </body>
