--- a/JS/lesson15/index.html
+++ b/JS/lesson15/index.html
@@ -17,13 +17,13 @@
         <input id="city" type="text">
         <div>Ваш номер телефона</div>
         <input id="number" type="text" >
-        <button onclick="addStudent()">Save</button>
+        <button id="nnn" onclick="user()">Save</button>
     </div>
-      <button onclick="addStudent()">Show Name,</button>
-      <button onclick="addStudent()">Show Age</button>
-      <button onclick="addStudent()">Show City</button>
-      <button onclick="addStudent()">Show Number</button>
-      <output name="result" id="result">0</output>
+      <button onclick="">Show Name,</button>
+      <button onclick="">Show Age</button>
+      <button onclick="">Show City</button>
+      <button onclick="">Show Number</button>
+      <output  id="result">0</output>
     <script src="script.js"></script>
 </body>
 </html>
