--- a/JS/lesson15/index.html
+++ b/JS/lesson15/index.html
@@ -19,11 +19,13 @@
         <input id="number" type="text" >
         <button id="nnn" onclick="user()">Save</button>
     </div>
-      <button onclick="">Show Name,</button>
+      <button onclick="showUsersName()">Show Name,</button>
       <button onclick="">Show Age</button>
       <button onclick="">Show City</button>
       <button onclick="">Show Number</button>
-      <output  id="result">0</output>
+      <p class="outputs">
+
+      </p>
     <script src="script.js"></script>
 </body>
 </html>
