--- a/JS/lesson15/index.html
+++ b/JS/lesson15/index.html
@@ -20,7 +20,7 @@
         <button id="nnn" onclick="user()">Save</button>
     </div>
       <button onclick="showUsersName()">Show Name,</button>
-      <button onclick="">Show Age</button>
+      <button onclick="showUsersAge()">Show Age</button>
       <button onclick="">Show City</button>
       <button onclick="">Show Number</button>
       <p class="outputs">
