--- a/JS/lesson15/index.html
+++ b/JS/lesson15/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="fon.css">
 </head>
+
 <body>
     <div class="form">
         <div>Ваше имя</div>
@@ -16,16 +18,17 @@
         <div>Ваш горд</div>
         <input id="city" type="text">
         <div>Ваш номер телефона</div>
-        <input id="number" type="text" >
+        <input id="number" type="text"><br>
         <button id="nnn" onclick="user()">Save</button>
     </div>
-      <button onclick="showUsersName()">Show Name,</button>
-      <button onclick="showUsersAge()">Show Age</button>
-      <button onclick="">Show City</button>
-      <button onclick="">Show Number</button>
-      <p class="outputs">
+    <button onclick="showUsersName()">Show Name</button>
+    <button onclick="showUsersAge()">Show Age</button>
+    <button onclick="showUsersCity()">Show City</button>
+    <button onclick="showUsersNumber()">Show Number</button>
+    <p class="outputs">
 
-      </p>
+    </p>
     <script src="script.js"></script>
 </body>
+
 </html>
