--- a/googleextension/popup.html
+++ b/googleextension/popup.html
@@ -5,8 +5,11 @@
         <link rel="stylesheet" type="text/css" href="fon.css"/>
     </head>
     <body>
-        <h1>Image Grabber</h1>
+        <header>
+        <img src="long_logo.png" alt="альтернативный текст">
         <button id="grabBtn">Sbor</button>
+        <button id="stopBtn">Stop</button>
         <script src="script.js"></script>
+        </header>
     </body>
 </html>
