--- a/googleextension/popup.html
+++ b/googleextension/popup.html
@@ -8,7 +8,7 @@
         <header>
         <img src="long_logo.png" alt="альтернативный текст">
         <button id="grabBtn">Sbor</button>
-        <button id="stopBtn">Stop</button>
+        <button id="stopBtn" onclick= "abort = true">Stop</button>
         <script src="script.js"></script>
         </header>
     </body>
