--- a/JS/DZ21/index.html
+++ b/JS/DZ21/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="products-container">ss</div>
     <header>
-        <h3>Список товаров</h3>
+        <button onclick="FuncPromise()" >Промисы</button>
+        <button onclick="FuncClass()" >Классы</button>
+        <button onclick="FuncCallB()" >Колбэк</button>
+        <button onclick="FuncArr()" >Массивы</button>
     </header>
     <main>
-        <p class="output" onclick="getProducts()">Список товаров</p>
-        <button onclick="getProducts()" >Массивы</button>
-        
+        <p class="output">ss</p>
     </main>
     <script src="script.js"></script>
 </body>
