--- a/figma/index.html
+++ b/figma/index.html
@@ -64,7 +64,7 @@
         </div>
         <div class="reviews">
             <div id="heading">
-                <p>Отзовы</p>
+                <p>Отзывы</p>
             </div>
             <div class="review">
                 <p class="revie">Кира Иванова</p>
