--- a/googleextension/popup.html
+++ b/googleextension/popup.html
@@ -7,8 +7,9 @@
     <body>
         <header>
         <img src="long_logo.png" alt="альтернативный текст">
-        <button id="grabBtn">Sbor</button>
-        <button id="stopBtn" onclick= "abort = true">Stop</button>
+        <button class="grab-btn" id="grabBtn" data-id="1">Passev</button>
+        <button class="grab-btn" id="grabBtn1" data-id="2">Derevo</button>
+        <button id="StopBtn">Stop</button>
         <script src="script.js"></script>
         </header>
     </body>
