--- a/googleextension/popup.html
+++ b/googleextension/popup.html
@@ -9,6 +9,7 @@
         <img src="long_logo.png" alt="альтернативный текст">
         <button class="grab-btn" id="grabBtn" data-id="1">Passev</button>
         <button class="grab-btn" id="grabBtn1" data-id="2">Derevo</button>
+        <button class="grab-btn" id="grabBtn2" data-id="3">semy</button>
         <button id="StopBtn">Stop</button>
         <script src="script.js"></script>
         </header>
